--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
         font-family: 'Nunito', sans-serif;
       }
     </style>
+<script type="importmap">
+{
+  "imports": {
+    "react/": "https://aistudiocdn.com/react@^19.2.0/"
+  }
+}
+</script>
 </head>
   <body class="bg-gray-50">
     <div id="root"></div>
