--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="vi">
   <head>
@@ -31,6 +30,7 @@
     <script type="text/babel" data-type="module">
 // --- START OF INLINED SCRIPT ---
 window.process = window.process || { env: {} }; // Polyfill for process.env
+window.process.env.API_KEY = 'AIzaSyBL42fp-nL0cAZYDc5etd0Ga5b4I3CoG7I';
 
 // --- External Imports ---
 import React, { useState, useRef, useCallback, useEffect } from 'https://esm.sh/react@18.2.0';
